# podcite

./: .gitignore  README.md
backend/: __init__.py  exceptions.py  langgraph.json  main.py  models.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: podcast.py  research.py  transcription.py  workflows.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  podcast.py
backend/app/services/: podcast_service.py  transcription_service.py
backend/app/utils/: file_utils.py
backend/app/workflows/: langgraph.json
backend/app/workflows/research_pipeline/: __init__.py
backend/app/workflows/research_pipeline/src/agent/: graph.py
backend/app/workflows/src/notable_context_graph/: graph.py
backend/app/workflows/src/research_graph/: __init__.py  graph.py  models.py  router.py  search.py  synthesis.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioPlayer.tsx  EpisodeInfo.tsx  NotableContextDisplay.tsx  PodcastInfo.tsx  RSSInputForm.tsx  ResearchCard.tsx  ResearchPanel.tsx  TranscriptionDisplay.tsx
frontend/lib/: api.ts  utils.ts
